tests/language_modules/03_import_resolution/fixtures/invalid/imported_module_not_found/App/Main.vf
module App.Main

import Banking.Missing

procedure main()
is
    check true
end main

end App.Main